use hello.py, it has the most current code

--- a/add_member_fb_2.html
+++ b/add_member_fb_2.html
@@ -4,7 +4,7 @@
             <h2>Please include username</h2>
         </head>
         <body>
-        <form action="/add_member_fb_AUTH" method="POST">
+        <form action="/add_member_fb_2_AUTH" method="POST">
             <input type="text" name = "group_name" placeholder="group name" required/></br>
             <input type="text" name = "first_name" placeholder="first name" required/> </br>
             <input type="text" name = "last_name" placeholder="last name" required/></br>
