Remember to use hello.py from now on!

--- a/home.html
+++ b/home.html
@@ -4,14 +4,15 @@
 <body>
 <form action="/home">
 	<h1>Welcome {{username}}</h1>
-	<a href="/create_fb">Create Friend Group</a>
-	<a href="/manage_fb">Manage Owned Friend Groups</a>
-	<a href="/manage_tags">Manage Content Tags</a>
 </form>
-<form action="/post" method="POST">
-	<a href="/create_new_content">Create New Post</a>
-	<!--<input type="submit" value = Create New Content />-->
-</form>
+
+<a href="/create_fb">Create Friend Group</a>
+<a href="/manage_fb">Manage Owned Friend Groups</a>
+<a href="/manage_tags">Manage Content Tags</a>
+<a href="/messages">Messages</a>
+
+<a href="/create_new_content">Create New Post</a>
+<!--<input type="submit" value = Create New Content />-->
 
 <style type="text/css">
 	table, th, td{
